test/fail/integration/_fail_sem_expr_mod_1.hs
x :: Int
x = mod "hello" 4
main = print "hello"